update no estilo

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
       <div class="flexbox">
         <div class="inputBox">
-          <span>Data de expiração</span>
+          <span>Validade</span>
           <input type="text" maxlength="7" class="month-input" placeholder="01/2027">
         </div>
 
