update: melhoria no UI

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 
     <form action="">
       <div class="inputBox">
-        <span>Número do Cartão</span>
-        <input type="text" maxlength="16" class="card-number-input" placeholder="1234 1234 1234 1234">
-      </div>
-      <div class="inputBox">
         <span>Nome no Cartão</span>
         <input type="text" class="card-holder-input" placeholder="Nome do titular">
+      </div>
+      <div class="inputBox">
+        <span>Número do Cartão</span>
+        <input type="text" maxlength="16" class="card-number-input" placeholder="1234 1234 1234 1234">
       </div>
       <div class="flexbox">
         <div class="inputBox">
@@ -74,6 +74,7 @@
         </div>
       </div>
       <input type="submit" value="Comprar agora →" class="submit-btn">
+      <p>Pagar R$57,92 →</p>
     </form>
 
 
